debut correction chap2

--- a/Chapitre2.tex
+++ b/Chapitre2.tex
@@ -111,7 +111,7 @@ Le {\em quatrième ventricule}, se situe sous le troisième, entre le cervelet, 
 %%%
 \section{Informations structurales fournies par l'imagerie IRM}
 Dans notre approche, nous avons choisi de baser l’architecture de notre modèle sur celle du sujet lui-même. Cette ambition requiert l’acquisition de données spécifiques permettant d’appréhender son anatomie vasculaire.\\
-Les propriétés biophysiques respectives du système artériel et du système veineux (vitesses d’écoulements, susceptibilité magnétique) font que les mêmes séquences d’imagerie ne fournissent pas la même qualité de détails pour ces deux systèmes. Seule l’injection d’un produit de contraste permet d’utiliser la même séquence pour visualiser le système artériel et le système veineux moyennant une adaptation des paramètres d’acquisitions au temps d’arrivée du produit de contraste dans les deux systèmes. Cette imagerie par injection de produit de contraste constitue d’ailleurs l’outil de référence pour l’imagerie morphologique qui nous intéresse, et c’est à ce titre que nous allons commencer par la décrire\textcolor{red}{...REFERENCE}. En effet, c’est la technique offrant le meilleur rapport signal sur bruit, et permettant la meilleure imagerie des flux turbulents. Néanmoins, le caractère invasif de l’injection limite l’application pour des raisons à la fois médicales et techniques. Dans un deuxième temps nous décrirons donc des modalités d’imagerie de substitution davantage utilisables en « routine » pour l’imagerie des systèmes artériels et veineux.
+Les propriétés biophysiques respectives du système artériel et du système veineux (vitesses d’écoulements, susceptibilité magnétique) font que les mêmes séquences d’imagerie ne fournissent pas la même qualité de détails pour ces deux systèmes. Seule l’injection d’un produit de contraste permet d’utiliser la même séquence pour visualiser le système artériel et le système veineux moyennant une adaptation des paramètres d’acquisitions au temps d’arrivée du produit de contraste dans les deux systèmes. Cette imagerie par injection de produit de contraste constitue d’ailleurs l’outil de référence pour l’imagerie morphologique qui nous intéresse, et c’est à ce titre que nous allons commencer par la décrire\textcolor{green}{ref: Takano et al., “Dynamic Contrast-Enhanced Subtraction MR Angiography in Intracranial Vascular Abnormalities.” et Sohn, Sevick, and Frayne, “Contrast-Enhanced MR Angiography of the Intracranial Circulation.”}. En effet, c’est la technique offrant le meilleur rapport signal sur bruit, et permettant la meilleure imagerie des flux turbulents. Néanmoins, le caractère invasif de l’injection limite l’application pour des raisons à la fois médicales et techniques. Dans un deuxième temps nous décrirons donc des modalités d’imagerie de substitution davantage utilisables en « routine » pour l’imagerie des systèmes artériels et veineux.
 %%%
 %%%
 \subsection{Imagerie par injection de produit de contraste}
@@ -119,7 +119,7 @@ Les propriétés biophysiques respectives du système artériel et du système v
 \begin{figure}[!t]
 \centering
 \includegraphics[width=11cm]{1_7_contrast_angiography}
-\caption{Illustration d'angiographie IRM par injection de produit de contraste.\textcolor{red}{ mettre la séquence exacte et details techniques d'acquisition?} }
+\caption{Illustration d'angiographie IRM par injection de produit de contraste.Séquence SPARSE acquise sur une IRM 3T avec une antenne 20 canaux, TE/TR=1.37/3.28 ms, matrice = 384, détection du contraste : carbolus axial, débit = 2cc/s (12cc), agent de contraste : Dotarem, taille du voxel = 0.7 x 0.7 x 0.7. L'image est une projection des intensités maximales selon le plan sagittal. }
 \label{fig:1_7_contrast_angiography}	
 \end{figure}
 %%%
