--- a/Chapitre2.tex
+++ b/Chapitre2.tex
@@ -119,7 +119,7 @@ Les propriétés biophysiques respectives du système artériel et du système v
 \begin{figure}[!t]
 \centering
 \includegraphics[width=11cm]{1_7_contrast_angiography}
-\caption{Illustration d'angiographie IRM par injection de produit de contraste.Séquence SPARSE acquise sur une IRM 3T avec une antenne 20 canaux, TE/TR=1.37/3.28 ms, matrice = 384, détection du contraste : carbolus axial, débit = 2cc/s (12cc), agent de contraste : Dotarem, taille du voxel = 0.7 x 0.7 x 0.7. L'image est une projection des intensités maximales selon le plan sagittal. }
+\caption{Illustration d'angiographie IRM par injection de produit de contraste.Séquence SPARSE acquise sur une IRM 3T avec une antenne 20 canaux, TE/TR=1.37/3.28 ms, matrice = 384, détection du contraste : carbolus axial, débit = 2cc/s (12cc), agent de contraste : Dotarem, taille du voxel = 0.7 x 0.7 x 0.7 mm. L'image est une projection des intensités maximales selon le plan sagittal. }
 \label{fig:1_7_contrast_angiography}	
 \end{figure}
 %%%
@@ -141,21 +141,21 @@ Ces approches souffrent actuellement de leur faible résolution, inhérente aux 
 %%%
 L’{\em imagerie par temps de vol} ("Time Of Flight" ou TOF) est une technique d’acquisition sans injection de produit de contraste permettant de mettre en évidence les flux artériels en utilisant les modifications liées au déplacement du volume sanguin, qui ne sera pas soumis à l’ensemble des impulsions radiofréquences contrairement au tissu stationnaire. Ce phénomène, appelé phénomène d’{\em entrée de coupe}, s'obtient en jouant sur la dynamique de la saturation magnétique, {\em via} les valeurs relatives du temps de répétition $TR$ de l'impulsion radiofréquence et du temps de relaxation $T1$. Lorsque les impulsions radiofréquences (90°) sont suffisamment éloignées ($TR > 5  T1$) la magnétisation longitudinale a le temps de retrouver son état initial (voir Figure~\ref{fig:1_9_saturation_partielle}) avant la prochaine impulsion. En revanche, lorsque les impulsions sont très rapprochées, cette magnétisation ne peut revenir à son état initial, et une plus faible aimantation longitudinale sera disponible pour les impulsions suivantes. Après quelques impulsions RF, un nouvel état d’équilibre moyen apparait (Figure~\ref{fig:1_9_saturation_partielle}) à un niveau inférieur au niveau original, c’est la saturation magnétique (voir pour une explication très claire le site ~\cite{timeflighteffects}).\\
 Dans une imagerie par temps de vol, les tissus stationnaires sont saturés grâce à des TR très courts, ce qui conduit à une diminution de leur signal, et induit le phénomène d’entrée de coupe. En effet, comme le sang artériel circulant entrant dans la zone explorée n’a pas été saturé, son aimantation longitudinale est maximale. Le signal du sang entrant apparait alors comme plus important que celui du tissu stationnaire (Figure~\ref{fig:1_8_IRM_temps_de_vol}). La visualisation des structures artérielles peut être ensuite améliorée lors du traitement de l'image par projection des intensités maximales selon différents angles afin d’aboutir à une « pseudo » vue 3D.\\
-Du fait du principe de l’imagerie TOF, la qualité de l’image récupérée va dépendre des caractéristiques des vaisseaux et des flux sanguins. Ainsi des flux lents\textcolor{red}{ ordre de grandeur?}  ou orientés parallèlement au plan de coupe entrainent une perte de signal de même que les flux turbulents (sténoses). C’est la raison pour laquelle cette modalité est peu adaptée au système veineux.\\
+Du fait du principe de l’imagerie TOF, la qualité de l’image récupérée va dépendre des caractéristiques des vaisseaux et des flux sanguins. Ainsi des flux lents (inférieurs à 10 cm/sec) \textcolor{green}{ref : Offerman et al., “Nonenhanced Methods for Lower-Extremity MRA.”}  ou orientés parallèlement au plan de coupe entrainent une perte de signal de même que les flux turbulents (sténoses) \textcolor{green}{ref : Bradley et al., “The Appearance of Rapidly Flowing Blood on Magnetic Resonance Images.”}. C’est la raison pour laquelle cette modalité est peu adaptée au système veineux.\\
 %%%
 \begin{figure}[!t]
 \centering
 \includegraphics[width=11cm]{1_8_IRM_temps_de_vol}
-\caption{Exemple d'image d'IRM par temps de vol. Le sang entrant dans le volume à imager apparait en hyper signal. A gauche l’image brute, à droite une projection des intensités maximales. \textcolor{red}{ mettre la séquence exacte et details sur la projection?}}
+\caption{Exemple d'image d'IRM par temps de vol. Le sang entrant dans le volume à imager apparait en hyper signal. A gauche l’image brute, à droite une projection des intensités maximales. La projection est obenue en identifiant le long de l'axe Z en chaque pixel(x,y) l'intensité maximale, le tout étant donc représenté dans une vue 2D. Séquence en temps de vol 3D obtenue à 3T (antenne 32 canaux) avec les paramètres : TE/TR = 3.43/21 ms, angle de bascule = 18°, taille du voxel = 0.26 x 0.26 x 0.6 mm, 220 coupes.
 \label{fig:1_8_IRM_temps_de_vol}	
 \end{figure}
-En fonction du contexte, l’acquisition peut être 2D ou 3D. Lors d’une acquisition 2D un ensemble de coupes fines est effectué pour aboutir à un pseudo-volume 3D. Les coupes fines autorisent une meilleure sensibilité aux flux lents du fait du temps plus court passé dans la coupe. \textcolor{red}{ développer un peu} En contrepartie, la résolution spatiale dans l’axe de la pile de coupe est limitée. Les acquisitions 3D autorisent elles l’obtention d’une bonne résolution spatiale dans les 3 directions, ainsi qu’un meilleur rapport signal sur bruit. En revanche les flux lents risquent d’être peu voir non visibles.\\
+En fonction du contexte, l’acquisition peut être 2D ou 3D. Lors d’une acquisition 2D un ensemble de coupes fines est effectué pour aboutir à un pseudo-volume 3D. Les coupes fines autorisent une meilleure sensibilité aux flux lents du fait du temps plus court passé dans la coupe. En effet les flux lents subissent l'effet de saturation de façon similaire au tissu stationnaire, l'utilisation de fines coupes permet permet de limiter cet effet, le sang ayant le temps de traverser ce petit volume. En contrepartie, la résolution spatiale dans l’axe de la pile de coupe est limitée. Les acquisitions 3D autorisent elles l’obtention d’une bonne résolution spatiale dans les 3 directions, ainsi qu’un meilleur rapport signal sur bruit. En revanche les flux lents risquent d’être peu voir non visibles.\\
 Cette séquence permet donc une {\em très bonne visualisation des artères principales du cerveau} (artères cérébrales moyennes, antérieurs et postérieurs), la visualisation des artères communicantes ou des veines en revanche peut s’avérer plus compliquée du fait de leur orientation et des débits relativement faibles attendus.
 %%%
 %%%
 \subsection{Système artériel et veineux : imagerie en contraste de phase}
 L’{\em imagerie en contraste de phase} repose sur le déphasage des spins mobiles soumis à un gradient bipolaire. Pour un gradient bipolaire d’une intensité et d’une durée donnée, les spins mobiles vont se déphaser en fonction de leur vitesse.\\
-Le gradient est orienté de telle façon à ce qu’il soit parallèle au vaisseau d’intérêt. Ainsi lors d’une première acquisiion, les spins mobiles se déphasent d’autant plus que leur vitesse est grande dans le vaisseau tandis que les spins immobiles présentent un déphasage fixe. Puis, dans un second temps, les lobes du gradient d’encodage sont inversés et une seconde acquisition est réalisée. Ainsi par soustraction des deux images, le déphasage des spins stationnaires dû aux hétérogénéités de champ sera identique dans les deux acquisitions et s’annulera, tandis que les spins mobiles vont accumuler deux déphasages de sens opposés que la soustraction va cumuler (Figure~\ref{fig:1_10_principe_contraste_phase}).\\
+Le gradient est orienté de telle façon à ce qu’il soit parallèle au vaisseau d’intérêt. Ainsi lors d’une première acquisition, les spins mobiles se déphasent d’autant plus que leur vitesse est grande dans le vaisseau tandis que les spins immobiles présentent un déphasage fixe. Puis, dans un second temps, les lobes du gradient d’encodage sont inversés et une seconde acquisition est réalisée. Ainsi par soustraction des deux images, le déphasage des spins stationnaires dû aux hétérogénéités de champ sera identique dans les deux acquisitions et s’annulera, tandis que les spins mobiles vont accumuler deux déphasages de sens opposés que la soustraction va cumuler (Figure~\ref{fig:1_10_principe_contraste_phase}).\\
 %%%
 \begin{figure}[!t]
 \centering
@@ -164,13 +164,13 @@ Le gradient est orienté de telle façon à ce qu’il soit parallèle au vaisse
 \label{fig:1_10_principe_contraste_phase}	
 \end{figure}
 Pour étudier les mouvements dans toutes les directions de l’espace, on répète ceci avec des gradients d’encodage de flux dans chacune des trois directions de l’espace. Une acquisition supplémentaire sans gradient d’encodage de flux sert de référence. Les séquences employées sont de type écho de gradient.\\
-Cette technique permet de mesurer de façon relative la vitesse et la direction des flux grâce à l’information de phase. Les flux se dirigeant vers l’examinateur sont codés en noir, ceux s’en éloignant en blanc. On peut ici mesurer des flux plus lents qu’en imagerie par temps de vol. \textcolor{red}{ donner des ordres de grandeur de temps dans la séquence et dans les vitesses mesurables} Le contraste obtenu est adapté en particulier à la reconstruction du système veineux.\\
+Cette technique permet de mesurer de façon relative la vitesse et la direction des flux grâce à l’information de phase. Les flux se dirigeant vers l’examinateur sont codés en noir, ceux s’en éloignant en blanc. On peut ici mesurer des flux plus lents qu’en imagerie par temps de vol (inférieur à 10 cm/sec) \textcolor{red}{donner le temps d'acquisition}. Le contraste obtenu est adapté en particulier à la reconstruction du système veineux.\\
 Les images obtenues permettent de visualiser l’ensemble des vaisseaux (Figure~\ref{fig:1_11_exemple_contraste_phase}).
 %%%
 \begin{figure}[!t]
 \centering
 \includegraphics[width=9cm]{1_11_exemple_contraste_phase}
-\caption{Exemple d'image de contraste de phase (projection).}
+\caption{Exemple d'image de contraste de phase (projection). Paramètres: champ de vue 24 x 24 cm, temps d’écho = 7.91 ms, temps de répétition = 35.7 ms, angle de bascule = 15°, taille de voxel = 0.47 x 0.47 x 1 mm, 144 niveaux de coupes.}
 \label{fig:1_11_exemple_contraste_phase}	
 \end{figure}
 
@@ -183,7 +183,7 @@ Une autre technique mettant en relief de nouveaux contrastes plus fins a été d
 \end{equation}
 On distingue deux comportements différents. Certains comme l’eau, le cuivre ou le zinc, vont s’{\em opposer au champ}, entrainant une diminution de la densité des lignes de forces : on les appelle {\em diamagnétiques} (leur susceptibilité est {\em inférieure à 0}). D’autres au contraire vont se{\em placer dans le sens due champ} (air, fer, magnésium), induisant un accroissement de la densité des lignes de forces : ce sont les substances {\em paramagnétiques} (susceptibilité {\em supérieure à 0}).\\
 A l’intérieur du cerveau coexistent des substances possédant différentes propriétés vis-à-vis de la magnétisation : certaines structures vont ainsi être plutôt diamagnétique (myéline) ou paramagnétique (veines, pallidum ; \cite{Wang_Liu_2014}). La possibilité de mesurer quantitativement cette susceptibilité a été évoquée dès les premières années de l’imagerie IRM (\cite{Young1987}). Les variations locales de la susceptibilité engendrent des variations locales concomitantes du champ magnétique effectif subit par le matériau, qui vont engendrer des distorsions locales des lignes de champ et ainsi des décalages en fréquence localisés. Les variations de susceptibilités sont donc à première vue des source d’{\em artéfacts}.  
-Depuis une quinzaine d'années a été développée une première modalité d’imagerie sensible aux variations de susceptibilité : l’{\em imagerie pondérée en susceptibilité} (Susceptibility Weighted Imaging ou SWI; \cite{Reichenbach2001}). Cette méthode tente d’utiliser l’information portée par l’imagerie de phase afin de fournir un contraste nouveau sensible en particulier aux veines et autres structures disposant d’une forte susceptibilité (cavernomes, calcifications etc.). En effet la saturation en oxygène dans le système veineux étant faible, le sang veineux est riche en dé-oxyhémoglobine, molécule disposant d’une forte susceptibilité. De ce fait cette imagerie donne accès au système veineux et ce potentiellement avec une meilleure résolution que le contraste de phase\textcolor{red}{ pourquoi? preciser les tailles de voxels} :on peut avoir accès à des veines plus petites.  En revanche l’image ne contient pas que des vaisseaux, toutes les structures présentant une susceptibilité importante et du fait de la magnitude, les autres tissus. Il reste cependant possible d’extraire une partie des veines de l’image via des algorithmes dédiés (\cite{Manniesing2006}) avec plus ou moins de succès.\\
+Depuis une quinzaine d'années a été développée une première modalité d’imagerie sensible aux variations de susceptibilité : l’{\em imagerie pondérée en susceptibilité} (Susceptibility Weighted Imaging ou SWI; \cite{Reichenbach2001}). Cette méthode tente d’utiliser l’information portée par l’imagerie de phase afin de fournir un contraste nouveau sensible en particulier aux veines et autres structures disposant d’une forte susceptibilité (cavernomes, calcifications etc.). En effet la saturation en oxygène dans le système veineux étant faible, le sang veineux est riche en dé-oxyhémoglobine, molécule disposant d’une forte susceptibilité. De ce fait cette imagerie donne accès au système veineux et ce potentiellement avec une meilleure résolution que le contraste de phase à durée équivalente. \textcolor{red}{ pourquoi? on allume pas les gradients d'encodage?} :on peut avoir accès à des veines plus petites. La résolution à 3T pouvant être de l'ordre de 0.6 x 0.6 x 0.6 mm. En revanche l’image ne contient pas que des vaisseaux, toutes les structures présentant une susceptibilité importante et du fait de la magnitude, les autres tissus. Il reste cependant possible d’extraire une partie des veines de l’image via des algorithmes dédiés (\cite{Manniesing2006}) avec plus ou moins de succès.\\
 Rappelons que lors d’une acquisition standard en IRM, le signal récupéré est codé sous forme complexe, et contient donc deux informations : partie imaginaire et partie réelle. Le plus usuellement ces deux informations sont combinées pour générer une imagerie de magnitude correspondant à la somme du carré des parties réelles et imaginaires :
 \begin{equation}
 M\,=\,Re^2\,+\,Im^2.
@@ -193,7 +193,7 @@ Cette image de magnitude est la plus utilisée en IRM pour le diagnostic. Elle p
 \Phi\,=\,atan\biggl(\frac{Re}{Im}\biggr).
 \end{equation}
 Cette imagerie de phase reflète directement les déphasages dû à la variabilité de la susceptibilité magnétique et donc du champ. Ces mêmes effets se traduisent par une perte de signal dans l’imagerie de magnitude. L'image de SWI combine ces deux informations selon une pondération arbitraire conduisnat au peilleur rendu visuel. \\
-La séquence correspondante elle-même est une séquence en {\em écho de gradient} standard. Le paramètre important est ici le temps d’écho. En effet, un temps d’écho court limitera la présence d’artéfacts mais réduira la visibilité des faibles susceptibilités, tandis que un temps d’écho long favorisera la détection de petites lésions hémorragiques et par la même occasion augmentera les artéfacts de l’image liés aux très fortes susceptibilités. \textcolor{red}{ donner des ordres de grandeur}Bien qu’un temps d’écho unique suffise à générer une cartographique pondérée en susceptibilité, il est bon de noter que de nouvelles approches à multi temps d’échos se développent afin de limiter la présence d’artéfacts dans l’image (\cite{Oh2013}). Les séquences peuvent être trouvées chez la plupart des constructeurs sous différents acronymes : SWI, SWAN, PADRE.\\
+La séquence correspondante elle-même est une séquence en {\em écho de gradient} standard. Le paramètre important est ici le temps d’écho. En effet, un temps d’écho court (inférieur à 20 ms) limitera la présence d’artéfacts mais réduira la visibilité des faibles susceptibilités, tandis que un temps d’écho long (supérieur à 20 ms) favorisera la détection de petites lésions hémorragiques et par la même occasion augmentera les artéfacts de l’image liés aux très fortes susceptibilités \textcolor{green}{ref : Kressler et al., “Nonlinear Regularization for per Voxel Estimation of Magnetic Susceptibility Distributions from MRI Field Maps.”}. Bien qu’un temps d’écho unique suffise à générer une cartographique pondérée en susceptibilité, il est bon de noter que de nouvelles approches à multi temps d’échos se développent afin de limiter la présence d’artéfacts dans l’image (\cite{Oh2013}). Les séquences peuvent être trouvées chez la plupart des constructeurs sous différents acronymes : SWI, SWAN, PADRE.\\
 Néanmoins, en imagerie pondéré en susceptibilité magnétique l’apport de l’image de phase n’est comme on l'a noté que qualitatif, cette dernière servant seulement de facteur multiplicatif à l’imagerie de magnitude (voir détails chapitre 0)\textcolor{red}{...chap.0???}.\\
 Plus récemment, une nouvelle technique intitulé {\em cartographie quantitative de susceptibilité} (Quantitative Susceptibility Mapping : QSM) a été développée avec l’ambition de remonter aux valeurs physiques exactes de la susceptibilité locale. En effet, la capacité à estimer quantitativement et non plus qualitativement a un nombre important d’applications potentielles. Comme on l'a dit, de nombreux tissus possèdent des susceptibilités différentes de leur environnement. Le calcium par exemple, possède une susceptibilité négative (diamagnétique) par rapport à l’eau. La mesure de susceptibilité pourrait ainsi permettre de mesurer la densité minérale de l’os (\cite{Chung1996}). Nous pouvons aussi mentionner, parmi les applications possibles : la différenciation des calcifications et des hémorragies chroniques (\cite{Kozic2009}), la mesure de la perte de myéline (\cite{Liu2011}), la quantification de la CMRO2 (\cite{Zhang2014}), ou encore la mesure de la saturation en oxygène dans les veines (\cite{Fan2014}).\\
 Nous développerons au chapitre 0 \textcolor{red}{...chap.0???} les difficultés intrinsèques à la reconstruction de cette susceptibilité. Pour résumer, la difficulté est double, reconstruire le champ à l’intérieur de l’espace intracrânien, puis à partir de ce champ obtenir la carte de susceptibilité. Ce problème est analytiquement mal posé et doit être abordé à l’aide de techniques numériques sophistiquées (\cite{Haacke2005},\cite{Shmueli2009}). Ce caractère mal posé conduit à la présence persistante d’artéfacts dans la carte de susceptibilité reconstruite. En l’état de l’art ces artéfacts ont été maîtrisés de façon suffisante pour faire émerger la QSM dans le domaine de la recherche clinique (\cite{Wang_Liu_2014}, \cite{Bilgic2013}, \cite{Deistung2013}).\\
@@ -210,7 +210,7 @@ En résumé, nous utiliserons principalement cette technique pour raffiner la re
 %%%
 \subsection{Mise en place d'un protocole d'acquisition}
 Compte tenu du cahier des charges défini dans l’introduction, la construction d’un modèle quantitatif détaillé adapté à la morphologie de chaque patient doit s’appuyer sur deux groupes d’informations. Les informations {\em morphologiques} correspondent à l’architecture du réseau artériel et du système veineux du patient, et les volumes de matière grise, blanche et du liquide cérébro-spinal du patient.\\
-Nous avons donc défini un protocole d’acquisition IRM dédié à l’implémentation de ce modèle qui incorpore toutes les séquences nécessaires à la collecte de ces informations au vue de l’état de l’art et des contraintes techniques de nos appareils. Nous faisons le choix, de n’utiliser que des séquences non-injectées afin de ne limiter le protocole à aucune catégorie de patients. Néanmoins, dans le cadre de la validation du modèle,  nous n’excluons évidemment pas d’utiliser dans certains cas particuliers des protocoles avec injection. Les données d’imagerie IRM ont été recueillies sur une IRM 3 tesla (Skyra, Siemens, Allemagne) en utilisant une antenne tête 32 éléments.\\
+Nous avons donc défini un protocole d’acquisition IRM dédié à l’implémentation de ce modèle qui incorpore toutes les séquences nécessaires à la collecte de ces informations au vue de l’état de l’art et des contraintes techniques de nos appareils. Nous faisons le choix, de n’utiliser que des séquences non-injectées afin de ne limiter le protocole à aucune catégorie de patients. Néanmoins, dans le cadre de la validation du modèle,  nous n’excluons évidemment pas d’utiliser dans certains cas particuliers des protocoles avec injection. Les données d’imagerie IRM ont été recueillies sur une IRM 3 tesla (Skyra, Siemens, Allemagne) en utilisant une antenne tête 32 éléments. Ces séquences sont bien définies dans la littérature et communes, nous ne discuterons donc pas le détail de chacun des paramètres. La SWI fera cependant exception, le détail et les justifications étant données dans un chapitre dédié (\textcolor{red}{renvoi au chapitre QSM}).\\
 Concernant les informations morphologiques, le protocole inclus les imageries anatomiques suivantes :
 \begin{itemize}
 \item un 3DT1 pour récupérer les volumes de matière grise, de matière blanche et de LCS, acquis avec les paramètres suivants : champ de vue = 25 x 25 cm, temps d’écho = 2.5 ms, temps de répétition = 1690 ms, angle de bascule = 9°, taille de voxel = 0.98 x 0.98 x 1 mm, 176 niveaux de coupes ;
